--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="image/svg+xml" href="https://res.cloudinary.com/do2qwucmp/image/upload/v1732312976/sovEtudes/zbhxyckxn6hd2qrveaaw.webp" />
+    <link rel="icon" type="image/svg+xml" href="images/logo4.jpg"  />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sov Etudes</title>
+    <link
+  rel="stylesheet"
+  href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css"
+/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -12,5 +16,15 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+  src="https://unpkg.com/react@16/umd/react.development.js"
+  crossorigin
+></script>
+<script
+  src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+  crossorigin
+></script>
+<script src="https://unpkg.com/react-quill@1.3.3/dist/react-quill.js"></script>
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
   </body>
 </html>
